--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ __pycache__/
 .vscode
 
 # Files from test of code coverage
-coverage.xml
+.coverage
+*.lcov
+dpnp/**/*.cxx
+dpnp_pytest.*
 
 # Backup files kept after git merge/rebase
 *.orig
