--- a/.github/workflows/cron-run-tests.yaml
+++ b/.github/workflows/cron-run-tests.yaml
@@ -92,6 +92,9 @@ jobs:
         run: |
           mamba install ${{ env.package-name }}=${{ steps.find_latest_tag.outputs.tag }} ${{ env.test-packages }} ${{ env.channels-list }}
 
+      - name: Install OCL CPU RT from Intel channel
+        run: mamba install intel-opencl-rt=*=intel_* -c ${{ env.channels-list }}
+
       - name: List installed packages
         run: mamba list
 
