--- a/.github/workflows/conda-package.yml
+++ b/.github/workflows/conda-package.yml
@@ -355,7 +355,7 @@ jobs:
           MAMBA_NO_LOW_SPEED_LIMIT: 1
 
       - name: Install OCL CPU RT from Intel channel
-        run: mamba install intel-opencl-rt=*=intel_* -c ${{ env.channels-list }}
+        run: mamba install intel-opencl-rt=*=intel_* ${{ env.channels-list }}
 
       - name: List installed packages
         run: mamba list
