--- a/.github/workflows/check-onemath.yaml
+++ b/.github/workflows/check-onemath.yaml
@@ -100,6 +100,7 @@ jobs:
           miniforge-version: latest
           use-mamba: 'true'
           conda-remove-defaults: 'true'
+          python-version: ${{ matrix.python }}
           environment-file: ${{ env.environment-file }}
           activate-environment: ${{ env.test-env-name }}
 
@@ -110,6 +111,7 @@ jobs:
           miniforge-version: latest
           use-mamba: 'true'
           conda-remove-defaults: 'true'
+          python-version: ${{ matrix.python }}
           environment-file: ${{ env.environment-file }}
           activate-environment: ${{ env.test-env-name }}
 
@@ -204,6 +206,7 @@ jobs:
           miniforge-version: latest
           use-mamba: 'true'
           conda-remove-defaults: 'true'
+          python-version: ${{ matrix.python }}
           environment-file: ${{ env.environment-file }}
           activate-environment: ${{ env.test-env-name }}
 
@@ -214,6 +217,7 @@ jobs:
           miniforge-version: latest
           use-mamba: 'true'
           conda-remove-defaults: 'true'
+          python-version: ${{ matrix.python }}
           environment-file: ${{ env.environment-file }}
           activate-environment: ${{ env.test-env-name }}
 
