--- a/environments/oneapi_pkgs.yml
+++ b/environments/oneapi_pkgs.yml
@@ -2,7 +2,7 @@ name: OneAPI packages to build DPNP without OneAPI env activated
 channels:
   - https://software.repos.intel.com/python/conda/
 dependencies:
-  - dpcpp_linux-64
-  - mkl-devel-dpcpp
+  - dpcpp_linux-64>=2025.3 # force to install the latest release
+  - mkl-devel-dpcpp>=2025.3 # force to install the latest release
   - onedpl-devel
-  - tbb-devel
+  - tbb-devel * intel_* # MKL hardly dependces on TBB from Intel channel
