Support CMAKE_BUILD_TYPE=Coverage
The change is based on implementation from dpctl#1692

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,6 +302,16 @@ else()
     message(FATAL_ERROR "Unsupported system.")
 endif()
 
+# Define flags for CMAKE_BUILD_TYPE=Coverage
+set(CMAKE_C_FLAGS_COVERAGE "${CMAKE_C_FLAGS_DEBUG} -O1 -g1 -DDEBUG")
+set(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS_DEBUG} -O1 -g1 -DDEBUG")
+set(CMAKE_MODULE_LINKER_FLAGS_COVERAGE "${CMAKE_MODULE_LINKER_FLAGS_DEBUG}")
+mark_as_advanced(
+    CMAKE_C_FLAGS_COVERAGE
+    CMAKE_CXX_FLAGS_COVERAGE
+    CMAKE_MODULE_LINKER_FLAGS_COVERAGE
+)
+
 if(DPNP_GENERATE_COVERAGE)
     string(
         CONCAT PROFILE_FLAGS
