--- a/dpnp/backend/extensions/statistics/CMakeLists.txt
+++ b/dpnp/backend/extensions/statistics/CMakeLists.txt
@@ -67,13 +67,11 @@ set_target_properties(
 
 target_include_directories(
     ${python_module_name}
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../common
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/../common
+        ${CMAKE_SOURCE_DIR}/dpnp/backend/include
+        ${CMAKE_SOURCE_DIR}/dpctl/tensor/libtensor/include
 )
-target_include_directories(
-    ${python_module_name}
-    PRIVATE ${CMAKE_SOURCE_DIR}/dpctl/tensor/libtensor/include
-)
-
 target_include_directories(${python_module_name} PUBLIC ${Dpctl_INCLUDE_DIR})
 
 if(WIN32)
