Extend isort configuration to add known third party lib as dpctl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,8 +134,10 @@ source = [
 ensure_newline_before_comments = true
 force_grid_wrap = 0
 include_trailing_comma = true
+known_third_party = ["dpctl"]
 line_length = 80
 multi_line_output = 3
+profile = "black"
 skip = ["dpnp/__init__.py"]
 split_on_trailing_comma = true
 use_parentheses = true
