Update pylint configuration to skip checking dpctl toplevel package and all dpctl submodules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,7 @@ disable = [
   "ungrouped-imports",
   "wrong-import-position"
 ]
+ignored-modules = ["dpctl", "dpctl.*"]
 include-naming-hint = true
 
 [tool.pylint.classes]
