Fix typo in ignore_run_exports name

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -63,7 +63,7 @@ build:
     script_env:
       - WHEELS_OUTPUT_FOLDER
       - OVERRIDE_INTEL_IPO  # [win]
-    ignore_run_export:
+    ignore_run_exports:
       - dpctl
 
 test:
