--- a/dpnp/backend/extensions/lapack/CMakeLists.txt
+++ b/dpnp/backend/extensions/lapack/CMakeLists.txt
@@ -82,15 +82,15 @@ set_target_properties(
 
 target_include_directories(
     ${python_module_name}
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../
-)
-target_include_directories(
-    ${python_module_name}
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../common
 )
 
-target_include_directories(${python_module_name} PUBLIC ${Dpctl_INCLUDE_DIR})
-target_include_directories(${python_module_name} PUBLIC ${Dpctl_TENSOR_INCLUDE_DIR})
+# treat below headers as system to suppress the warnings there during the build
+target_include_directories(
+    ${python_module_name}
+    SYSTEM
+    PRIVATE ${SYCL_INCLUDE_DIR} ${Dpctl_INCLUDE_DIRS} ${Dpctl_TENSOR_INCLUDE_DIR}
+)
 
 if(WIN32)
     target_compile_options(
