Update .gitignore to ignore .so files in dpctl_ext

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ dpnp/**/*.cpython*.so
 dpnp/**/*.pyd
 *~
 core
+
+# TODO: revert to `dpctl/`
+# when dpnp fully migrates dpctl/tensor
+dpctl_ext/**/*.cpython*.so
